[package]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
name = "undname"
version = "0.1.0"

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.5.0"
bstr = "1.9.1"
bumpalo = "3.16.0"
nonmax = "0.5.5"
thiserror = "1.0.61"

[dev-dependencies]
criterion = "0.5.1"
memchr = "2.7.2"
msvc-demangler = "0.10.1"

[[bench]]
harness = false
name = "comparison"

[target."cfg(windows)".dev-dependencies]
windows = {version = "0.56.0", features = [
  "Win32_System_Diagnostics_Debug",
]}

[profile.release]
debug = 1
