[package]
authors = ["Ryan McKenzie"]
categories = ["development-tools::debugging"]
description = "A Rust library for demangling Microsoft symbols"
documentation = "https://ryan-rsm-mckenzie.github.io/undname-rs/undname/index.html"
edition = "2021"
homepage = "https://github.com/Ryan-rsm-McKenzie/undname-rs"
include = [
  "benches/*",
  "src/*",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]
keywords = ["demangle", "c-plus-plus", "msvc"]
license = "Apache-2.0 WITH LLVM-exception"
name = "undname"
readme = "README.md"
repository = "https://github.com/Ryan-rsm-McKenzie/undname-rs"
version = "1.1.2"

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.5.0"
bumpalo = {version = "3.16.0", features = ["collections", "std"]}
nonmax = "0.5.5"
smallvec = "1.13.2"
thiserror = "1.0.61"

[dev-dependencies]
clap = {version = "4.5.4", features = ["derive"]}
criterion = "0.5.1"
memchr = "2.7.2"
msvc-demangler = "0.10.1"

[[bench]]
harness = false
name = "comparison"

[target."cfg(windows)".dev-dependencies]
windows = {version = "0.56.0", features = [
  "Win32_System_Diagnostics_Debug",
]}

[profile.release]
debug = 1
